syntax = "proto3";

message Unknown6 {
	int32 request_type = 1; // 5 for IAPs, 6 is unknown still
	Unknown2 unknown2 = 2;

	message Unknown2 {
		bytes encrypted_signature = 1;
	}
}
